# vmcotacoes

./: .codclimate.yml  .codecov.yml  .covaragerc  .gitignore  .landscape.yml  .travis.yml  Pipfile  Procfile  README.md  app.json  coverage.xml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: main.yml
app/: __init__.py
app/controller/: controller.py
app/models/: model.py
app/views/: base.html  cotacao.html  error.html  teste.html
core/: app.py
core/model/: cotacoes.py  model.py
core/static/css/: bootstrap.min.css  stylesheet.css
core/templates/: base.html  error.html  index.html
coverage/: codeclimate.json
rates/: app.py  config.py  default.toml
rates/busines_rules/: cotacoes.py
tests/: conftest.py  test_app.py  test_main.py
tests/fixtures/vcr_cassettes/: data_success.yaml
