[tool.poetry]
name = "vmcotacoes"
version = "0.1.1"
description = "Projeto de Cotações de Moedas Estrangeiras"
authors = ["Vicente Marçal <vicente.marcal@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
MarkupSafe = "^2.1.1"
certifi = "^2022.9.24"
chardet = "^5.0.0"
click = "^8.1.3"
idna = "^3.4"
itsdangerous = "^2.1.2"
python-decouple = "^3.6"
pytz = "^2022.4"
requests = "^2.28.1"
simplejson = "^3.17.6"
urllib3 = "^1.26.12"


[tool.poetry.group.dev.dependencies]
PyYAML = "^6.0"
codacy-coverage = "^1.3.11"
codecov = "^2.1.12"
coverage = "^6.5.0"
flake8 = "^5.0.4"
mccabe = "^0.7.0"
multidict = "^6.0.2"
pbr = "^5.10.0"
py = "^1.11.0"
pycodestyle = "^2.9.1"
pyflakes = "^2.5.0"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
pytest-flask = "^1.2.0"
six = "^1.16.0"
vcrpy = "^4.2.1"
wrapt = "^1.14.1"
yarl = "^1.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
