[tool.poetry]
name = "vmcotacoes"
version = "0.2.0"
description = "Projeto de Cotações de Moedas Estrangeiras"
authors = ["Vicente Marçal <vicente.marcal@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dynaconf = "^3.1.11"


[tool.poetry.group.dev.dependencies]
codecov = "^2.1.12"
flake8 = "^5.0.4"
pytest-cov = "^4.0.0"

[tool.pytest.ini_options]
python_files = [
    "test*.py",
    "*tests.py",
]
minversion = "6.0"
addopts = "-ra -q -vv"
testpaths = [
    "tests/",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
