[tool.poetry]
name = "vmcotacoes"
version = "0.2.0"
description = "Projeto de Cotações de Moedas Estrangeiras"
authors = ["Vicente Marçal <vicente.marcal@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dynaconf = "^3.1.11"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
gunicorn = "^21.2.0"
jinja2 = "^3.1.3"
httpx = "^0.25.0"


[tool.poetry.group.dev.dependencies]
codecov = "^2.1.12"
flake8 = "^5.0.4"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.21.1"
asgi-lifespan = "^2.1.0"
flake8-pyproject = "^1.2.3"
pytest-order = "^1.1.0"

[tool.pytest.ini_options]
python_files = [
    "test*.py",
    "*tests.py",
]
minversion = "6.0"
addopts = "-ra -q -vv"
testpaths = [
    "./tests",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
